2004/01/28 15:42 (-0500) rwmcfa1

	* xs/GtkCalendar.xs, xs/GtkRenderer.xs, xs/GtkTextChildAnchor.xs,
	xs/GtkTextView.xs: apidoc updates

2004/01/28 00:27 (+0100) kaffeetisch

	A t/GdkSelection.t
	* MANIFEST: New test.

	* t/Gdk.t: Test Gtk2::Gdk::Threads::init, enter and leave.

2004/01/27 23:10 (+0100) kaffeetisch

	A t/GdkCursor.t
	A t/GdkKeys.t
	* MANIFEST: New tests.

	* t/GdkEvent.t: Test get_time, get_state, [sg]et_screen, axis and
	get_axis, coords and get_coords, put, get, peek,
	[sg]et_show_events, and Gtk2::Gdk::events_pending.

	* t/GtkTextIter.t: Test get_marks.

	* xs/GdkCursor.xs: Implement an accessor for cursor->type.  Take
	ownership of the cursor returned by new_for_display.  Add a class
	argument to new_from_pixbuf.

	* xs/GdkEvent.xs: Bind gdk_events_pending as
	Gtk2::Gdk::events_pending instead of
	Gtk2::Gdk::Event::gdk_events_pending.  Bind
	gdk_event_get_graphics_expose as
	Gtk2::Gdk::Event::get_graphics_expose.  Provide get_axis in
	addition to axis.  state returns a guint, no gint.

	* xs/GdkKeys.xs: Change the PREFIX from gtk_keymap_ to gk_keymap_.
	Don't warn about unregistered subclasses.

2004/01/26 21:35 (+0100) kaffeetisch

	* t/GdkWindow.t: Use a parent window for calls that seem to
	require one.

2004/01/25 23:47 (-0500) muppetman

	* t/GdkGC.t: skip GdkScreen-related stuff on 2.0.x

2004/01/25 19:53 (-0500) muppetman

	* xs/Gtk2.xs: revert the removal of shadow, and add some commentary
	explaining why it is important.  it allows us to keep from leaking
	strings removed from argv by gtk_init().

2004/01/25 19:43 (-0500) rwmcfa1

	* t/GdkDisplay.t: use DISPLAY env var instead of assuming :0.0 will 
	work

	* t/GtkComboBoxEntry.t: use ord to get rid of some errors trying to take
	a to a power.

2004/01/25 23:37 (+0100) kaffeetisch

	* t/GdkDrawable.t: Skip the draw_image test if get_image returned
	undef.

	* examples/simplelist.pl
	* pm/SimpleList.pm
	* t/GtkSimpleList.t: Implement, document, test and demonstrate a